# todo-sqlite-cli

./: .gitignore  .pre-commit-config.yaml  ALTERNATIVES.md  Cargo.toml  README.md  about.hbs  about.toml  tasks.py
.github/workflows/: build.yml
examples/: .gitignore  .todo-sqlite-cli  CLAUDE.md.snippet
man/: todo-sqlite-cli.1
mcp_server/: pyproject.toml  server.py
src/: cli.rs  db.rs  error.rs  format.rs  main.rs  resolve.rs
src/commands/: add.rs  done.rs  edit.rs  export_completed.rs  export_todo.rs  init.rs  list.rs  mod.rs  next.rs  revert.rs  rm.rs  show.rs  start.rs  stop.rs
tests/: add_list_show.rs  export.rs  init.rs  invariants.rs  migration.rs  options.rs  resolve.rs
tests/common/: mod.rs
