[package]
name = "todo-sqlite-cli"
version = "1.3.0"
edition = "2021"
rust-version = "1.75"
description = "Per-project TODO list CLI backed by SQLite, designed for coding agents"
license = "MIT"
authors = ["Brandon Arrendondo <brandon@arrendondo.dev>"]
repository = "https://github.com/brandonarrendondo/todo-sqlite-cli"
homepage = "https://github.com/brandonarrendondo/todo-sqlite-cli"
readme = "README.md"
keywords = ["todo", "sqlite", "cli", "agent", "task"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "target/",
    "examples/",
    ".github/",
    "about.hbs",
    "about.toml",
]

[[bin]]
name = "todo-sqlite-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
